# descry

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Image.cpp  Main.cpp  descryConfig.h.in
src/inc/: Image.hpp  descryConfig.h
